# howl

./: .eslintrc.js  .gitmodules  Cargo.toml  Dockerfile  NOTICE  README.md  compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.github/workflows/: build.yml  checks.yml
apps/frontend/: package.json
apps/frontend/src/styles/: Home.module.css
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
common/protocol/: Cargo.toml  build.rs  package.json
common/protocol/proto/howlapp/v1/: channel.proto  guild.proto  hello.proto  message.proto  user.proto
common/protocol/src/: index.ts  lib.rs
crates/consul/: Cargo.toml
crates/howl-node/: Cargo.toml
crates/howl-node/src/: config.rs  error.rs  event.rs  identity.rs  lib.rs
crates/howl-node/src/store/: mls.rs  mod.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/prisma/prisma/: schema.prisma
crates/prisma/src/: .gitignore  lib.rs
crates/protocol/: Cargo.toml
crates/tracing/: Cargo.toml
infrastructure/: README.md  main.tf
infrastructure/charts/: consul.yaml  vault.yaml
infrastructure/modules/example-service/: Dockerfile  deployment.yaml  main.tf  service.yaml
infrastructure/modules/gateway/: Dockerfile  deployment.yaml  main.tf  service-defaults.yaml  service.yaml
infrastructure/modules/nginx/: config.yaml  deployment.yaml  gateway.yaml  main.tf  referencegrant.yaml  routes.yaml  service-defaults.yaml  service.yaml
infrastructure/modules/postgres/: main.tf  values.yaml
services/example-service/: Cargo.toml
services/example-service/src/: main.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/guild-service/: Cargo.toml
services/guild-service/src/: main.rs
