[package]
name = "example-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

howlapp-consul = { path = "../../crates/consul" }
howlapp-protocol = { path = "../../common/protocol", features = ["hello"] }
howlapp-tracing = { path = "../../crates/tracing" }
