[package]
name = "gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
juniper = "0.15"
juniper_warp = "0.7"
warp = "0.3"

anyhow = { workspace = true } 
tokio = { workspace = true }
serde = { workspace = true }

howlapp-protocol = { path = "../../crates/protocol" }
howlapp-tracing = { path = "../../crates/tracing" }
