[package]
name = "guild-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

howlapp-consul = { path = "../../crates/consul" }
howlapp-protocol = { path = "../../crates/protocol" }
howlapp-tracing = { path = "../../crates/tracing" }
